--- a/src/assets/sass/black-dashboard/custom/_sidebar-and-main-panel.scss
+++ b/src/assets/sass/black-dashboard/custom/_sidebar-and-main-panel.scss
@@ -291,7 +291,7 @@
           height: 32px;
           margin-left: 0;
           margin-right: 15px;
-          background: #fff;
+          background: #000;
           border-radius: 32px;
           text-align: center;
           img {
